crates/strider-analyze/tests/snapshots/mips64be__complex__call_uses_call_return.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x120000ee0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x120000ee8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v8" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v10" [color="#888888", style=dashed];
  "v10" -> "9" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v11" [color="#888888", style=dashed];
  "v11" -> "9" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "14" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "16" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
