crates/strider-analyze/tests/snapshots/mips64be__complex__dispatch_on_flag.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x120000ed0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "22" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "17" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v23" [color="#888888", style=dashed];
  "v23" -> "22" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v24" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v24" [color="#888888", style=dashed];
  "v24" -> "22" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v25" [color="#888888", style=dashed];
  "v25" -> "22" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v26" [color="#888888", style=dashed];
  "v26" -> "22" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "21" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "27" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x10:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "6" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "27" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "7" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
